# envrac-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
run/: .dockerignore  Cargo.toml  Dockerfile
run/src/: lib.rs  main.rs
run/src/models/: Article.rs  category.rs  github_object.rs  mod.rs  task.rs
src/: lib.rs
tests/: envrac_lib_test.rs  todoist_output.json
