[package]
name = "run"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
chrono = "0.4.41"
base64 = "0.21.7"
warp = "0.3.7"
tokio = { version = "1.47.0", features = ["rt", "rt-multi-thread", "macros"] }
